Template files .txx renamed as .cpp files to enable IDE hilight and debug functionality

--- a/Base/CMakeLists.txt
+++ b/Base/CMakeLists.txt
@@ -67,7 +67,7 @@ mafTransformBase.h
 mafTransformFrame.cpp
 mafTransformFrame.h
 mafVector.h
-mafVector.txx
+mafVector.cpp
 mafVersion.h
 mmuIdFactory.cpp
 mmuIdFactory.h
