Changes to build it with CMake 3.3

--- a/Libraries/modules/FindITK.cmake.in
+++ b/Libraries/modules/FindITK.cmake.in
@@ -18,7 +18,8 @@
 # try to setup legacy search path for ITK
 FIND_PATH(ITK_DIR UseITK.cmake "${MFL_BINARY_DIR}/ITK/Build")
 
-INCLUDE ("${CMAKE_ROOT}/Modules/FindITK.cmake")
+#INCLUDE ("${CMAKE_ROOT}/Modules/FindITK.cmake")
+find_package(ITK)
 
 #MARK_AS_ADVANCED (
 #  ITK_DIR
