--- a/Libraries/modules/FindVTK.cmake.in
+++ b/Libraries/modules/FindVTK.cmake.in
@@ -18,7 +18,8 @@
 # try to setup legacy search path for VTK
 FIND_PATH(VTK_DIR UseVTK.cmake "${MFL_BINARY_DIR}/VTK/Build")
 
-INCLUDE ("${CMAKE_ROOT}/Modules/FindVTK.cmake")
+#INCLUDE ("${CMAKE_ROOT}/Modules/FindVTK.cmake")
+find_package(VTK)
 
 #MARK_AS_ADVANCED (
 #  VTK_DIR
