Updated Operation Created mafInteractorPERPicker

--- a/Interaction/CMakeLists.txt
+++ b/Interaction/CMakeLists.txt
@@ -146,6 +146,8 @@ SET(PROJECT_SRCS
   ######################
   medInteractorPicker.cpp
   medInteractorPicker.h
+  mafInteractorPERPicker.cpp
+  mafInteractorPERPicker.h
   mafInteractorDICOMImporter.h
   mafInteractorDICOMImporter.cpp  
   medInteractor2DAngle.cpp
