Fix VISUAL_STUDIO_RUNTIME Path

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -119,7 +119,10 @@ OPTION(BUILD_EXAMPLES "Build examples." ON )
 OPTION(BUILD_TESTING "Build the testing tree." OFF)
 OPTION(MAF_BUILD_MAFDLL "Build mafDLL.dll." OFF)
 OPTION(MAF_QA "Generate QA" OFF)
+
 FIND_FILE( VISUAL_STUDIO_RUNTIME vcredist_x86.exe )
+STRING(REPLACE "/" "\\" VISUAL_STUDIO_RUNTIME ${VISUAL_STUDIO_RUNTIME})
+
 # MARK_AS_ADVANCED (
   # BUILD_SHARED_LIBS
 # )
