Added vtkTubeFilter to obtain a tube output even if a line contains two (or more) consecutive points in the same position.

--- a/vtkMAF/CMakeLists.txt
+++ b/vtkMAF/CMakeLists.txt
@@ -217,7 +217,8 @@ SET(vtkMAF_SRCS
   vtkMAFStentModelSource.h
   vtkMAFDeformableSimplexMeshFilter.h
   vtkMAFDeformableSimplexMeshFilter_Impl.h
-
+	
+	vtkMAFTubeFilter.cxx vtkMAFTubeFilter.h
 )
 
 IF(WIN32)
