Created Ansys Operations Test Added TestData

--- a/Testing/Operations/CMakeLists.txt
+++ b/Testing/Operations/CMakeLists.txt
@@ -11,7 +11,7 @@ ENDIF (MAF_BUILD_MAFDLL)
 #-----------------------------------------------------------------------------
 SET(PROJECT_SRCS 
 	mafOperationsTests.h mafOperationsTests.cpp
-  mafOpImporterMSF1xTest.h mafOpImporterMSF1xTest.cpp
+	mafOpImporterMSF1xTest.h mafOpImporterMSF1xTest.cpp
 	mafOpImporterSTLTest.h mafOpImporterSTLTest.cpp
 	mafOpExporterSTLTest.h mafOpExporterSTLTest.cpp
 	mafOpCropTest.h mafOpCropTest.cpp
@@ -125,6 +125,10 @@ SET(PROJECT_SRCS
 	mafOpInteractionDebuggerTest.h mafOpInteractionDebuggerTest.cpp
 	mafOpIterativeRegistrationTest.h mafOpIterativeRegistrationTest.cpp
 	mafOpTransformTest.h mafOpTransformTest.cpp
+	mafOpImporterAnsysCDBFileTest.h mafOpImporterAnsysCDBFileTest.cpp
+	mafOpExporterAnsysCDBFileTest.h mafOpExporterAnsysCDBFileTest.cpp
+	mafOpImporterAnsysInputFileTest.h mafOpImporterAnsysInputFileTest.cpp
+	mafOpExporterAnsysInputFileTest.h mafOpExporterAnsysInputFileTest.cpp
 )
 
 ADD_EXECUTABLE(mafOperationsTests ${PROJECT_SRCS})
