Created a corner filter specific for landmarkcloud that manages also not showed vmes

--- a/vtkMAF/CMakeLists.txt
+++ b/vtkMAF/CMakeLists.txt
@@ -219,6 +219,8 @@ SET(vtkMAF_SRCS
   vtkMAFDeformableSimplexMeshFilter_Impl.h
 	
 	vtkMAFTubeFilter.cxx vtkMAFTubeFilter.h
+	
+	vtkMAFLandmarkCloudOutlineCornerFilter.cxx vtkMAFLandmarkCloudOutlineCornerFilter.h
 )
 
 IF(WIN32)
